--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -215,14 +215,12 @@ binary_sensor:
       min_length: 5ms
       max_length: 350ms
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelect();
+        homething_menu.select: homeThingMenu
     on_multi_click:
     - timing:
         - ON for at least 0.5s
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelectHold();
+        homething_menu.option: homeThingMenu
 
 sensor:
   - platform: rotary_encoder
@@ -242,13 +240,11 @@ sensor:
         pullup: true
     id: rotary
     on_clockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollClockwise(id(rotary).state);
+      then:
+        homething_menu.scrollClockWise: homeThingMenu
     on_anticlockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollCounterClockwise(id(rotary).state);
+      then:
+        homething_menu.scrollCounterClockwise: homeThingMenu
   - platform: custom
     lambda: |-
       auto megadesk = new Megadesk(id(uart_desk));
