--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -105,14 +105,12 @@ binary_sensor:
       min_length: 5ms
       max_length: 350ms
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelect();
+        homething_menu.select: homeThingMenu
     on_multi_click:
     - timing:
         - ON for at least 0.5s
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelectHold();
+        homething_menu.option: homeThingMenu
   - platform: gpio
     id: T4_BtnA
     pin:
@@ -120,8 +118,7 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->rotaryScrollCounterClockwise(0);
+        homething_menu.scrollCounterClockWise: homeThingMenu
   - platform: gpio
     id: T4_BtnB
     pin:
@@ -129,8 +126,7 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->buttonPressSelect();
+        homething_menu.select: homeThingMenu
   - platform: gpio
     id: T4_BtnC
     pin:
@@ -138,8 +134,7 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->rotaryScrollClockwise(0);
+        homething_menu.scrollClockWise: homeThingMenu
 
 switch:
   - platform: gpio
