--- a/basic.yaml
+++ b/basic.yaml
@@ -19,7 +19,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: automations
 
       # type: local
       # path: components
