--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -30,7 +30,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: automations
       # type: local
       # path: components
     refresh: 0s
@@ -52,7 +52,7 @@ external_components:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: main
+    ref: automations
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts-roboto.yaml, # default font
