update remaining configs

--- a/common/m5stack-stickc/MiniEncoderC.yaml
+++ b/common/m5stack-stickc/MiniEncoderC.yaml
@@ -28,10 +28,10 @@ MiniEncoderC:
     encoder_filter: 3
     on_clockwise:
       then:
-        homething_menu.scrollClockWise: homeThingMenu
+        homething_menu.scroll_clockwise: homeThingMenu
     on_anticlockwise:
       then:
-        homething_menu.scrollCounterClockWise: homeThingMenu
+        homething_menu.scroll_counter_clockwise: homeThingMenu
 
 # internal LED
 light:
