--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -79,13 +79,9 @@ sensor:
         pullup: true
     id: rotary
     on_clockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollClockwise(id(rotary).state);
+        homething_menu.scroll_clockwise: homeThingMenu
     on_anticlockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollCounterClockwise(id(rotary).state);
+        homething_menu.scroll_counter_clockwise: homeThingMenu
   - platform: template
     name: Battery Percent
     id: batteryPercent
