use automation branch for media player

--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -35,7 +35,7 @@ external_components: #include homething, and esphome-components
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: main
+      ref: automations
     refresh: 0s
     components: [
       homeassistant_component,
