--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -38,7 +38,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: main
+      ref: automations
     refresh: 0s
     components: [
       homeassistant_component,
