--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -32,7 +32,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: main
+      ref: automations
     refresh: 0s
     components: [
       homeassistant_component,
