--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -39,7 +39,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: main
+      ref: automations
     refresh: 0s
     components: [
       homeassistant_component,
