--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -30,7 +30,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: automations
+      ref: main
       # type: local
       # path: components
     refresh: 0s
@@ -38,7 +38,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: automation
+      ref: main
     refresh: 0s
     components: [
       homeassistant_component,
@@ -52,7 +52,7 @@ external_components:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: automations
+    ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts-roboto.yaml, # default font
