--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -36,7 +36,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: automations
+      ref: main
       # type: local
       # path: components
     refresh: 0s
@@ -44,7 +44,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: automation
+      ref: main
     refresh: 0s
     components: [
       homeassistant_component,
@@ -58,7 +58,7 @@ external_components:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: automations
+    ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/ipod/lilygo_tdisplay_ipod_battery.yaml, # used for battery percent
