--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -19,7 +19,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: automations
+      ref: main
       # type: local
       # path: components
     refresh: 0s
@@ -27,7 +27,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: automation
+      ref: main
     refresh: 0s
     components: [
       homeassistant_component,
@@ -41,7 +41,7 @@ external_components:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: automations
+    ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts-roboto.yaml, # default font
