--- a/common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml
+++ b/common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml
@@ -21,12 +21,7 @@ binary_sensor:
     internal: true
     on_press:
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressScreenLeft();
-    on_release:
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonReleaseScreenLeft();
+        media_player_group.select_next_player: media_group_component
   - platform: gpio
     pin:
       number: $screen_right_pin
@@ -38,14 +33,12 @@ binary_sensor:
       min_length: 5ms
       max_length: 350ms
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressScreenRight();
+        homething_menu.option: homeThingMenu
     on_multi_click:
     - timing:
         - ON for at least 0.5s
       then:
-      - lambda: |-
-          id(homeThingMenu)->topMenu();
+        homething_menu.home: homeThingMenu
     - timing:
         - ON for at least 3s
       then:
@@ -62,8 +55,7 @@ binary_sensor:
     id: sw5
     on_press:
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressLeft();
+        homething_menu.left: homeThingMenu
   - platform: gpio
     internal: true
     pin:
@@ -75,8 +67,7 @@ binary_sensor:
     id: sw4
     on_press:
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressUp();
+        homething_menu.up: homeThingMenu
   - platform: gpio
     internal: true
     pin:
@@ -88,8 +79,7 @@ binary_sensor:
     id: sw3
     on_press:
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressRight();
+        homething_menu.right: homeThingMenu
   - platform: gpio
     internal: true
     pin:
@@ -101,8 +91,7 @@ binary_sensor:
     id: sw2
     on_press:
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressDown();
+        homething_menu.down: homeThingMenu
   - platform: gpio
     internal: true
     pin:
@@ -116,11 +105,9 @@ binary_sensor:
       min_length: 5ms
       max_length: 350ms
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelect();
+        homething_menu.select: homeThingMenu
     on_multi_click:
     - timing:
         - ON for at least 0.5s
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelectHold();
+        homething_menu.option: homeThingMenu
