--- a/common/m5stack-stickc/MiniEncoderC.yaml
+++ b/common/m5stack-stickc/MiniEncoderC.yaml
@@ -15,28 +15,23 @@ MiniEncoderC:
       # min_length: 0ms
       # max_length: 350ms
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->buttonPressSelect();
+        homething_menu.select: homeThingMenu
     # on_multi_click:
     # - timing:
     #     - ON for at least 0.5s
-    #   then:
-    #   - lambda: |-
-    #       id(homeThingMenu)->buttonPressSelectHold();
+      # then:
+        # homething_menu.option: homeThingMenu
   encoder:
     name: "${friendly_name} Rotary Encoder"
     id: rotary
     internal: True
     encoder_filter: 3
     on_clockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollClockwise(id(rotary).state);
+      then:
+        homething_menu.scroll_clockwise: homeThingMenu
     on_anticlockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollCounterClockwise(id(rotary).state);
+      then:
+        homething_menu.scroll_counter_clockwise: homeThingMenu
 
 # internal LED
 light:
