--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -79,13 +79,9 @@ sensor:
         pullup: true
     id: rotary
     on_clockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollClockwise(id(rotary).state);
+        homething_menu.scroll_clockwise: homeThingMenu
     on_anticlockwise:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressWakeUpDisplay();
-          id(homeThingMenu)->rotaryScrollCounterClockwise(id(rotary).state);
+        homething_menu.scroll_counter_clockwise: homeThingMenu
   - platform: template
     name: Battery Percent
     id: batteryPercent
@@ -105,14 +101,12 @@ binary_sensor:
       min_length: 5ms
       max_length: 350ms
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelect();
+        homething_menu.select: homeThingMenu
     on_multi_click:
     - timing:
         - ON for at least 0.5s
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelectHold();
+        homething_menu.option: homeThingMenu
   - platform: gpio
     id: T4_BtnA
     pin:
@@ -120,8 +114,7 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->rotaryScrollCounterClockwise(0);
+        homething_menu.scroll_counter_clockwise: homeThingMenu
   - platform: gpio
     id: T4_BtnB
     pin:
@@ -129,8 +122,7 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->buttonPressSelect();
+        homething_menu.select: homeThingMenu
   - platform: gpio
     id: T4_BtnC
     pin:
@@ -138,8 +130,7 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->rotaryScrollClockwise(0);
+        homething_menu.scroll_clockwise: homeThingMenu
 
 switch:
   - platform: gpio
