--- a/common/m5stack-fire/binary_sensor_rotary.yaml
+++ b/common/m5stack-fire/binary_sensor_rotary.yaml
@@ -6,25 +6,15 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->buttonPressUp();
+        homething_menu.back: homeThingMenu
   - platform: gpio
     id: M5_BtnB
     pin:
       number: 38
       inverted: true
     on_click:
-      min_length: 5ms
-      max_length: 350ms
       then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelect();
-    on_multi_click:
-    - timing:
-        - ON for at least 0.5s
-      then:
-      - lambda: |-
-          id(homeThingMenu)->buttonPressSelectHold();
+        homething_menu.select: homeThingMenu
   - platform: gpio
     id: M5_BtnC
     pin:
@@ -32,5 +22,4 @@ binary_sensor:
       inverted: true
     on_click:
       then:
-        - lambda: |-
-            id(homeThingMenu)->buttonPressRight();
+        homething_menu.option: homeThingMenu
