--- a/common/homethingMediaPlayerComponents.yaml
+++ b/common/homethingMediaPlayerComponents.yaml
@@ -2,7 +2,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: main
+      ref: espwarnings
     refresh: 0s
     components: [
       homeassistant_component,
