--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -31,7 +31,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: espwarnings
       # type: local
       # path: components
     refresh: 0s
@@ -39,7 +39,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: main
+      ref: espwarnings
     refresh: 0s
     components: [
       homeassistant_component,
@@ -53,7 +53,7 @@ external_components:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: main
+    ref: espwarnings
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/ipod/lilygo_tdisplay_ipod_backlight.yaml, # used for toggling backlight
