--- a/debug.yaml
+++ b/debug.yaml
@@ -20,78 +20,212 @@ wifi: # setup wifi, make sure secrets.yaml exists!
 
 external_components:
   - source:
-    #   type: git
-    #   url: https://github.com/landonr/homeThing
-    #   ref: espwarnings
-
-      type: local
-      path: components
+      type: git
+      url: https://github.com/ssieb/custom_components
+    components: [ ip5306 ]
+  - source:
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: espwarnings
+    #   type: local
+    #   path: components
     refresh: 0s
-    components: [homeThingDisplayState, homeThing]
-
-spi:
-  clk_pin: GPIO18
-  mosi_pin: GPIO19
-
-substitutions: # set friendly name
-  friendly_name: "homething-debug"
-  log_level: "DEBUG"
-
-font:
-  - file: "gfonts://Roboto"
-    id: roboto
-    size: 20
-  - file: "fonts/materialdesignicons-webfont.ttf" 
-    id: material_font
-    size: 19
-    glyphs: [
-      '󰐊', # mdi-play
-      '󰓛', # mdi-stop
-      '󰏤', # home-pause
-      '󰽥', # mdi-moon-waning-crescent
-      '󰒝', # mdi-shuffle
-      '󰒞', # mdi-shuffle-disabled
-      '󰕾', # mdi-volume-high
-      '󰕿', # mdi-volume-low
-      '󰚺', # mdi-plex
-      '󰝆', # mdi-netflix
-      '󰗃', # mdi-youtube
-      '󰓇', # mdi-spotify
-      '󰔂', # mdi-television
-      '󰋜', # mdi-home
-      '󰌵', # mdi-lightbulb
-      '󰌶', # mdi-lightbulb-outline
-      '󰑗', # mdi-repeat-off
-      '󰑘', # mdi-repeat-once
-      '󰑖', # mdi-repeat
+    components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
+  - source:
+      type: git
+      url: https://github.com/landonr/esphome-components
+      ref: espwarnings
+    #   type: local
+    #   path: ../local_components/components
+    refresh: 0s
+    components: [
+      homeassistant_component,
+      homeassistant_media_player,
+      media_player_source,
+      media_player_source_sonos,
+      media_player_source_spotify,
+      media_player_source_custom
     ]
+
+packages: # maybe modify: include default ipod controls
+  remote_package:
+    url: https://github.com/landonr/homeThing
+    ref: espwarnings
+    files: [
+      common/device_base.yaml, # defines api, ota, free memory and uptime sensor
+      common/fonts-roboto.yaml, # default font
+      common/icon_fonts-local.yaml, # material icons
+      common/settings.yaml, # settings screen
+      common/m5stack-fire/ip5306.yaml, # power management and screen backlight
+      common/m5stack-fire/sleep.yaml, # deep sleep
+      common/m5stack-fire/binary_sensor.yaml, # buttons
+      common/m5stack-fire/backlight.yaml, # backlight
+      common/m5stack-fire/sidelight.yaml, # sidelight
+      common/images-local.yaml, # boot screen image
+    ]
+    refresh: 0s
+
+substitutions:
+  friendly_name: "homeThing debug"
+  large_heavy_font_size: "24"
+  large_font_size: "24"
+  medium_font_size: "20"
+  small_font_size: "18"
+  home_thing_logo_size: "64"
+  material_font_large_size: "28"
+  material_font_small_size: "24"
+
+color: # setup primary accent color
+  - id: my_primary_accent
+    red_int: 255
+    green_int: 25
+    blue_int: 25
+
+light: # home assistant lights
+  - platform: homeassistant_component
+    id: light_desk_lamp
+    entity_id: light.desk_lamp
+    name: Desk Lamp
+  - platform: homeassistant_component
+    id: light_all_lights
+    entity_id: light.all_lights
+    name: All Lights
+
+media_player_source_sonos: # sonos favorite source
+  id: sonos
+
+media_player: # home assistant media players
+  - platform: homeassistant_media_player
+    name: Beam
+    entity_id: "media_player.beam"
+    id: media_player_beam
+    type: speaker
+    sources:
+      - id: sonos
+        type: sonos
+  - platform: homeassistant_media_player
+    name: TV
+    entity_id: "media_player.55_tcl_roku_tv"
+    id: media_player_tv
+    type: roku
+    soundbar:
+      speaker: media_player_beam
+
+homeassistant_media_player: # media player menu
+  id: media_group_component
+  media_players:
+    - id: media_player_beam
+      type: speaker
+    - id: media_player_tv
+      type: roku
+
+number: # home assistant number
+  - platform: homeassistant_component
+    entity_id: number.desk_height_cm
+    name: desk height
+    id: desk_height_number
+    min_value: 61.0
+    max_value: 105.0
+    step: 1
+
+cover: # home assistant cover
+  - platform: homeassistant_component
+    entity_id: "cover.megadesk_cover"
+    name: "Megadesk"
+    id: cover_megadesk
+
+homeThingAppNowPlaying:
+  id: now_playing
+  media_player_group: media_group_component
+  display: my_display
+  display_state: display_state_id
 
 homeThingDisplayState:
   id: display_state_id
-  font_small: roboto
-  font_medium: roboto
-  font_large: roboto
-  font_large_heavy: roboto
-  font_material_large: material_font
-  font_material_small: material_font
+  colors:
+    accent_primary: my_primary_accent
+  draw_battery_level: true
+  font_small: small_font
+  font_medium: medium_font
+  font_large: large_font
+  font_large_heavy: large_heavy_font
+  font_material_large: material_font_large
+  font_material_small: material_font_small
+  launch_image: launch_image
 
 homeThing:
   id: homeThingMenu
+  settings:
+    sleep_after: 14400
   display: my_display
-  display_state: display_state_id
   on_redraw:
     then:
       component.update: my_display
+  display_state: display_state_id
+  apps:
+    - now_playing
+  screens:
+    - name: Desk Screen
+      entities:
+        - type: cover
+          id: cover_megadesk
+        - type: number
+          id: desk_height_number
+        - type: command
+          name: "desk nudge up"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.desk_position_nudge_up"
+        - type: command
+          name: "desk nudge down"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.desk_position_nudge_down"
+        - id: light_desk_lamp
+          type: light
+    - name: Lights Screen
+      entities:
+        - id: light_all_lights
+          type: light
+        - type: command
+          name: "color lights"
+          command:
+            - homeassistant.service:
+                service: script.colors
+        - type: command
+          name: "lights off"
+          command:
+            - homeassistant.service:
+                service: script.off_script
+    - name: Settings Screen
+      show_version: True
+      entities:
+        - id: "restart_switch"
+          type: switch
+        - id: wifi_ssid
+          type: text_sensor
+        - id: wifi_signal_percent
+          type: sensor
+        - id: wifi_ip
+          type: text_sensor
+
+spi:
+  clk_pin: 18
+  mosi_pin: 23
+  miso_pin: 19
 
 display:
-  - platform: st7789v
-    model: TTGO_TDisplay_135x240
+  - platform: ili9xxx
+    model: M5STACK
+    cs_pin: 14
+    dc_pin: 27
+    reset_pin: 33
     id: my_display
-    cs_pin: GPIO5
-    dc_pin: GPIO16
-    reset_pin: GPIO23
-    rotation: 90
-    update_interval: 10s
+    update_interval: 3600s 
     lambda: |-
       id(homeThingMenu)->draw_menu_screen();
       return;
