--- a/basic.yaml
+++ b/basic.yaml
@@ -19,8 +19,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: espwarnings
-
+      ref: main
       # type: local
       # path: components
     refresh: 0s
