--- a/debug.yaml
+++ b/debug.yaml
@@ -26,7 +26,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: espwarnings
+      ref: main
     #   type: local
     #   path: components
     refresh: 0s
@@ -34,7 +34,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
-      ref: espwarnings
+      ref: main
     #   type: local
     #   path: ../local_components/components
     refresh: 0s
@@ -50,7 +50,7 @@ external_components:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: espwarnings
+    ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts-roboto.yaml, # default font
