add s3 dxf and kicad pcb (#87)
* add s3 dxf and kicad pcb

* organize case files and add kicad file

* add s3 case stl and f3z files

* change led to 5mm and add transistor to it

* fix ground not connecting to bottom pin

* add capacitor to i2c

* update cap to be between 3v and gnd for i2c

* update track thickness

* reroute transistor

* add yaml for gpio extender

* Update README.md

* more readme update

* Update README.md

* more readme updates!

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,7 @@ homeThingTTGO.yaml
 *.pyc
 *:Zone.Identifier
 .vscode/c_cpp_properties.json
+~s3.kicad_pcb.lck
+fp-info-cache
+Case Design/tdisplay-s3/s3-backups
+s3.kicad_prl
