add launch image to weather

--- a/common/images-weather.yaml
+++ b/common/images-weather.yaml
@@ -1,4 +1,8 @@
 image:
+  - id: launch_image
+    file: "docs/homeThingLogo.svg"
+    resize: 48x48
+    type: TRANSPARENT_BINARY
   - file: mdi:weather-cloudy
     id: weather_cloudy
     resize: 50x50
