--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -24,7 +24,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: weather
+      ref: main
       # type: local
       # path: components
     refresh: 0s
@@ -46,7 +46,7 @@ external_components:
 packages: # maybe modify: include default ipod controls
   remote_package:
     url: https://github.com/landonr/homeThing
-    ref: weather
+    ref: main
     files: [
       common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/ipod/lilygo_tdisplay_ipod_backlight.yaml, # used for toggling backlight
