--- a/common/images.yaml
+++ b/common/images.yaml
@@ -1,5 +1,5 @@
 image:
   id: launch_image
-  file: "https://raw.githubusercontent.com/landonr/homeThing/main/docs/homeThing%20logo.svg"
+  file: "https://raw.githubusercontent.com/landonr/homeThing/main/docs/homeThingLogo.svg"
   resize: 48x48
   type: TRANSPARENT_BINARY
