--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -19,7 +19,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: lando/boot_image
       # type: local
       # path: components
     refresh: 0s
@@ -227,7 +227,6 @@ homeThingDisplayState:
   font_large_heavy: large_heavy_font
   font_material_large: material_font_large
   font_material_small: material_font_small
-  launch_image: launch_image
     
 homeThing:
   id: homeThingMenu
