--- a/common/images-weather.yaml
+++ b/common/images-weather.yaml
@@ -1,8 +1,13 @@
+substitutions:
+  launch_image_file: "https://raw.githubusercontent.com/landonr/homeThing/main/docs/homeThingLogo.svg"
+  launch_image_size: "48x48"
+  launch_image_type: "TRANSPARENT_BINARY"
+
 image:
   - id: launch_image
-    file: "docs/homeThingLogo.svg"
-    resize: 48x48
-    type: TRANSPARENT_BINARY
+    file: $launch_image_file
+    resize: $launch_image_size
+    type: $launch_image_type
   - file: mdi:weather-cloudy
     id: weather_cloudy
     resize: 50x50
