--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -19,7 +19,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: lando/boot_image
+      ref: main
       # type: local
       # path: components
     refresh: 0s
