--- a/debug.yaml
+++ b/debug.yaml
@@ -26,7 +26,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/landonr/homeThing
-      ref: main
+      ref: lando/boot_image
     #   type: local
     #   path: components
     refresh: 0s
