--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -22,11 +22,11 @@ wifi: # setup wifi, make sure secrets.yaml exists!
 
 external_components:
   - source:
-      type: git
-      url: https://github.com/landonr/homeThing
-      ref: main
-      # type: local
-      # path: components
+      # type: git
+      # url: https://github.com/landonr/homeThing
+      # ref: lando/boot_image
+      type: local
+      path: components
     refresh: 0s
     components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying, homeThingAppWeather]
   - source:
@@ -142,7 +142,6 @@ homeThingDisplayState:
   font_large_heavy: large_font
   font_material_large: material_font_large
   font_material_small: material_font_small
-  launch_image: launch_image
 
 homeThingAppWeather:
   id: weather
