--- a/common/homethingBase.yaml
+++ b/common/homethingBase.yaml
@@ -1,8 +1,5 @@
 external_components: #include homething, and esphome-components
-  - source:
-      type: git
-      url: https://github.com/landonr/homeThing
-      ref: main
+  - source: github://landonr/homeThing
       # type: local
       # path: components
     refresh: 0s
