--- a/debug.yaml
+++ b/debug.yaml
@@ -23,10 +23,7 @@ external_components:
       type: git
       url: https://github.com/ssieb/custom_components
     components: [ ip5306 ]
-  - source:
-      type: git
-      url: https://github.com/landonr/homeThing
-      ref: main
+  - source: github://landonr/homeThing
     #   type: local
     #   path: components
     refresh: 0s
