--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -16,10 +16,7 @@ wifi:
     password: !secret wifi_fallback_password
 
 external_components:
-  - source:
-      type: git
-      url: https://github.com/landonr/homeThing
-      ref: main
+  - source: github://landonr/homeThing
       # type: local
       # path: components
     refresh: 0s
