--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -37,7 +37,7 @@ external_components:
       # type: local
       # path: components
     refresh: 0s
-    components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
+    components: [homeThing, homeThingDisplayState, homeThingApp, homeThingAppNowPlaying, homeThingAppSnake, homeThingAppCatToy, homeThingAppBreakout, homeThingAppWeather]
   - source: github://pr#5254 # used to load fonts on compile
     components: [ font ]
   - source:
