add now playing image (#98)
* add now playing image

* replace branch reference with current branch

* replace external component ref

* update s3 ref

* fix now playing bottom bar position

* fix margin on bottom menu

* move now playing settings into now playing app

* update s3 example to use pcb and media player image

* add ref for components

* fix megadesk now playing config

--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -28,10 +28,7 @@ substitutions:
   log_level: "WARN"
   
 external_components:
-  - source:
-      type: git
-      url: https://github.com/landonr/homeThing
-      ref: main
+  - source: github://landonr/homeThing
       # type: local
       # path: components
     refresh: 0s
@@ -108,12 +105,12 @@ homeThingAppNowPlaying:
   media_player_group: media_group_component
   display: my_display
   display_state: display_state_id
+  draw_now_playing_bottom_menu: true
 
 homeThingDisplayState:
   id: display_state_id
   colors:
     accent_primary: my_primary_accent
-  draw_now_playing_bottom_menu: true
   font_small: small_font
   font_medium: medium_font
   font_large: large_font
