--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -226,23 +226,23 @@ homeThingAppCatToy:
 ### Online Media Player Image
 
 # home assistant sensor
-# needs an image proxy docker running to resize the image
-# 
-# imageproxy: http://172.16.1.23:8080
-# homeassistant: http://172.16.1.67:8123
-# 
+# - needs an image proxy docker running to resize the image 
+# - https://hub.docker.com/r/darthsim/imgproxy/
+#
 #   template:
 #     - sensor:
-#         - name: Beam Picture Proxy
+#         - name: Media Player Image Proxy URL
 #           state: |
 #             {{ 
-#               state_attr("media_player.beam", "entity_picture") | base64_encode
+#               state_attr(states.sensor.active_player.state, "entity_picture") | base64_encode
 #             }}
 #           attributes:
 #             url: >
-#               {{
-#                 "http://172.16.1.23:8080/insecure/rs:fill:170:170/" + (("http://172.16.1.67:8123" + state_attr("media_player.beam", "entity_picture")) | base64_encode) + ".png"
-#               }}
+#               {% set homeAssistantURL = "http://172.16.1.67:8123" %}
+#               {% set imageProxyURL = "img.landorghini.com/insecure/rs:fill:170:170/" %}
+#               {% set url = homeAssistantURL + state_attr(states.sensor.active_player.state, "entity_picture") %}
+#               {% set base64url_encoded_url = (url | base64_encode) | replace('+', '-') | replace('/', '_') | replace('=', '') %}
+#               {{ imageProxyURL + base64url_encoded_url }}
 
 text_sensor:
   - platform: homeassistant
